docs/0.7/_sources/api/gammapy.maps.WcsMap.rst.txt
WcsMap
======

.. currentmodule:: gammapy.maps

.. autoclass:: WcsMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~WcsMap.data
      ~WcsMap.geom

   .. rubric:: Methods Summary

   .. autosummary::

      ~WcsMap.coadd
      ~WcsMap.create
      ~WcsMap.crop
      ~WcsMap.downsample
      ~WcsMap.fill_by_coord
      ~WcsMap.fill_by_idx
      ~WcsMap.fill_by_pix
      ~WcsMap.from_geom
      ~WcsMap.from_hdu_list
      ~WcsMap.from_hdulist
      ~WcsMap.get_by_coord
      ~WcsMap.get_by_idx
      ~WcsMap.get_by_pix
      ~WcsMap.interp_by_coord
      ~WcsMap.interp_by_pix
      ~WcsMap.iter_by_coord
      ~WcsMap.iter_by_image
      ~WcsMap.iter_by_pix
      ~WcsMap.make_hdu
      ~WcsMap.pad
      ~WcsMap.read
      ~WcsMap.reproject
      ~WcsMap.set_by_coord
      ~WcsMap.set_by_idx
      ~WcsMap.set_by_pix
      ~WcsMap.sum_over_axes
      ~WcsMap.to_hdulist
      ~WcsMap.upsample
      ~WcsMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom

   .. rubric:: Methods Documentation

   .. automethod:: coadd
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: from_geom
   .. automethod:: from_hdu_list
   .. automethod:: from_hdulist
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: iter_by_coord
   .. automethod:: iter_by_image
   .. automethod:: iter_by_pix
   .. automethod:: make_hdu
   .. automethod:: pad
   .. automethod:: read
   .. automethod:: reproject
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: sum_over_axes
   .. automethod:: to_hdulist
   .. automethod:: upsample
   .. automethod:: write
